# ultimateALPR-SDK

./: .gitignore  AWS.md  AmlogicNPU.md  CMakeLists.txt  CONTAINER.md  Dependencies.md  GPGPU.md  Jetson.md  LICENSE  NPU.md  README.md  ultimateALPR-SDK.sln
apps_tests/test_sdk/: main.cxx  test_sdk.vcxproj  test_sdk.vcxproj.filters
assets/: README.md
assets/fonts/: GlNummernschildEng-XgWd-license.txt
assets/models/: README.md  charset_anpr_chinese_size=73.txt  charset_anpr_korean_size=78.txt  charset_anpr_latin_size=37.txt  ultimateALPR-SDK_detecti.mobile.model.doubango  ultimateALPR-SDK_detecti_main.mobile.model.doubango  ultimateALPR-SDK_detecti_pysearch.mobile.model.doubango  ultimateALPR-SDK_klass_labels_lpci.txt.doubango  ultimateALPR-SDK_klass_labels_vbsr.txt.doubango  ultimateALPR-SDK_klass_labels_vcr.txt.doubango  ultimateALPR-SDK_klass_labels_vmmr.txt.doubango  ultimateALPR-SDK_tensorflow_fp.txt.doubango
assets/models.amlogic_npu/: README.md  pid_serial_mapping.txt  supported_hardware.txt
assets/models.openvino/: README.md
assets/models.tensorrt/: README.md  versions.txt
binaries/: README.md
binaries/android/: README.md
binaries/jetson/: README.md
binaries/jetson_tftrt/: README.md
binaries/linux/: README.md
binaries/raspbian/: README.md
binaries/windows/: README.md
c++/: README.md  main.cxx  ultimateALPR-SDK-API-PUBLIC.h
csharp/: ULTALPR_SDK_IMAGE_TYPE.cs  UltAlprSdkEngine.cs  UltAlprSdkParallelDeliveryCallback.cs  UltAlprSdkResult.cs  csharp.i  ultimateAlprSdk.cs  ultimateAlprSdkPINVOKE.cs
include/: ultimateALPR-SDK-API-PUBLIC.h
java/: java.i
lib/: ultimateALPR-SDK.vcxproj  ultimateALPR-SDK.vcxproj.filters
lib/include/: ultimate_alpr_sdk_api_private.h  ultimate_alpr_sdk_api_public.h  ultimate_alpr_sdk_config.h
lib/source/: ultimate_alpr_sdk_api_private.cxx  ultimate_alpr_sdk_api_public.cxx
objc/: objc.i
perl/: perl.i  ultimateAlprSdk.pm
python/: README.md  python.i  setup.py  ultimateALPR-SDK-API-PUBLIC-SWIG_python.cxx  ultimateALPR-SDK-API-PUBLIC-SWIG_python.h  ultimateAlprSdk.py
ruby/: ruby.i  ultimateALPR-SDK-API-PUBLIC-SWIG.cxx  ultimateALPR-SDK-API-PUBLIC-SWIG.h
samples/: CMakeLists.txt  README.md
samples/android/: README.md  settings.gradle
samples/c++/: CMakeLists.txt  README.md  alpr_utils.h  android_utils.h  stb_image.h
samples/c++/benchmark/: CMakeLists.txt  README.md  benchmark.cxx  benchmark.sln  benchmark.vcxproj  benchmark.vcxproj.filters  run.sh
samples/c++/recognizer/: CMakeLists.txt  README.md  recognizer.cxx  recognizer.sln  recognizer.vcxproj  recognizer.vcxproj.filters
samples/c++/runtimeKey/: CMakeLists.txt  README.md  runtimeKey.cxx  runtimeKey.sln  runtimeKey.vcxproj  runtimeKey.vcxproj.filters
samples/c++/trt_optimizer/: CMakeLists.txt  README.md  trt_optimizer.cxx  trt_optimizer.vcxproj  trt_optimizer.vcxproj.filters
(+127 files in other folders)
